# ddd-clean-playground

./: README.md  pyproject.toml  pyproject.toml---
.devcontainer/: Dockerfile  devcontainer.json
src/app/: __init__.py  config.py  main.py
src/app/core/usecases/: get_user.py
src/app/interfaces/: user_router.py
src/application/: __init__.py
src/application/dtos/: __init__.py  user_dto.py
src/application/services/: __init__.py  user_app_service.py
src/application/use_cases/: __init__.py  create_user.py
src/domain/: __init__.py
src/domain/models/: __init__.py  user.py
src/domain/repositories/: __init__.py  user_repository.py
src/domain/services/: __init__.py  user_service.py
src/domain/value_objects/: __init__.py  email.py
src/infrastructure/: __init__.py
src/infrastructure/db/: __init__.py  models.py  session.py
src/infrastructure/external_services/: __init__.py  mail_service.py
src/infrastructure/repositories/: __init__.py  user_repository_impl.py
src/interfaces/: __init__.py
src/interfaces/api/: __init__.py  user_api.py
src/interfaces/cli/: __init__.py  user_cli.py
src/tests/integration/: __init__.py  test_user_app_service.py  test_user_repository.py
src/tests/unit/: __init__.py  test_email_value_object.py  test_user_entity.py  test_user_service.py
